--- a/Wayfarer.Editor.csproj
+++ b/Wayfarer.Editor.csproj
@@ -69,6 +69,10 @@
       <Project>{26B559B2-1C9F-42D1-81A6-6E42A700F234}</Project>
       <Name>Wayfarer.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Wayfarer\Wayfarer.csproj">
+      <Project>{A0D6B264-B0F5-4E46-AD81-10AB77475B60}</Project>
+      <Name>Wayfarer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
